# gandalf

./: .dockerignore  .gitignore  .modalignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.cuda  Dockerfile.metal  FDT_WORKING_PARAMETERS.md  Gandalf.in  LICENSE  Makefile  Makefile.bak  README.md  alf_postproc.py  benchmark_timestepping.py  courant.cu  damping_kernel.cu  debug_orszag.py  device_funcs.cu  diag_kernel.cu  diagnostics.cu  dne_dbpar.cu  fldfol.cu  fldfol_funcs.cu  forcing.cu  gandalf  gandalf.cu  implementation_plan.md  init_func.cu  init_kernel.cu  k_funcs.cu  maxReduc.cu  modal_app.py  nlps.cu  nlps_kernel.cu  nonlin.cu  pyproject.toml  reduc_kernel.cu  slow_postproc.py  (+6 more)
.github/: FUNDING.yml
conda/: README.md  meta.yaml
configs/: alfven_wave.yaml  decaying_turbulence.yaml  driven_turbulence.yaml  high_resolution.yaml  hyper_dissipation.yaml  modal_high_res.yaml  orszag_tang.yaml  test_quick.yaml
docs/: HERMITE_CASCADE_INVESTIGATION.md  ISSUE82_SUMMARY.md  ISSUE99_CLOSURE_SUMMARY.md  MODAL_GUIDE.md  README.md  benchmark_checkpoints.md  hermite_truncation_checklist.md  kinetic_turbulence_guide.md  numerical_methods.md  parameter_scans.md  physics_validity.md  recommended_parameters.md  running_simulations.md
examples/: CHECKPOINT_GUIDE.md  README.md  alfvenic_cascade_benchmark.py  analyze_64cubed_detailed.py  analyze_issue82_diagnostics.py  analyze_spectrum_quality.py  decaying_turbulence.py  driven_turbulence.py  driven_turbulence_high_re.py  field_line_visualization.py  forcing_minimal.py  grid_convergence_tests.py  hyper_dissipation_demo.py  (+5 more)
(+58 files in other folders)
