[project]
name = "krmhd"
version = "0.1.0"
description = "Kinetic Reduced MHD (KRMHD) spectral solver for magnetized plasma turbulence"
readme = "README.md"
authors = [
    { name = "anjor", email = "anjor@umd.edu" }
]
requires-python = ">=3.10"
dependencies = [
    "h5py>=3.11.0",
    "jax>=0.4.20",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
metal = [
    "jax-metal>=0.0.4",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "ruff>=0.14.0",
]
